force-app/main/default/objects/Activity/fields/Activity_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Activity_Subtype__c</fullName>
    <label>Activity Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Activity_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Activity_Subtypes</valueSetName>
    </valueSet>
</CustomField>