force-app/main/default/objects/Activity/fields/Create_Follow_Up_Task__c.field-meta.xml
<CustomField>
    <fullName>Create_Follow_Up_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, triggers a flow to create a follow-up task</description>
    <inlineHelpText>If checked, triggers a flow to create a follow-up task</inlineHelpText>
    <label>Create Follow-Up Task</label>
    <type>Checkbox</type>
</CustomField>