force-app/main/default/objects/Activity/fields/Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date__c</fullName>
    <defaultValue>(Today() + 7)</defaultValue>
    <description>If follow-up box is checked, this field will show with a pre-populated follow-up date</description>
    <inlineHelpText>If follow-up box is checked, this field will show with a pre-populated follow-up date</inlineHelpText>
    <label>Follow Up Date</label>
    <type>Date</type>
</CustomField>