force-app/main/default/objects/Activity/fields/Follow_Up_Subject__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Subject__c</fullName>
    <defaultValue>$RecordType.Name</defaultValue>
    <description>Creates the subject line for the new follow-up task</description>
    <inlineHelpText>Creates the subject line for the new follow-up task</inlineHelpText>
    <label>Follow Up Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>