force-app/main/default/objects/Activity/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>New_Lead_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Lost_Reason</valueSetName>
    </valueSet>
</CustomField>