force-app/main/default/objects/Activity/fields/New_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Lead_Status__c</fullName>
    <defaultValue>&quot;No Change&quot;</defaultValue>
    <description>Updates the Lead Status based on the outcome of the call</description>
    <inlineHelpText>Updates the Lead Status based on the outcome of the call</inlineHelpText>
    <label>New Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No_Change</fullName>
                <default>true</default>
                <label>No Change</label>
            </value>
            <value>
                <fullName>Outreach</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>