force-app/main/default/objects/Activity/fields/Related_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Id__c</fullName>
    <description>Derive the Salesforce ID for the associated object, using WhatId as a priority.</description>
    <formula>IF(ISBLANK(WhatId),WhoId,WhatId)</formula>
    <label>Related Object Id</label>
    <type>Text</type>
</CustomField>